--- a/dbg.ipynb
+++ b/dbg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "5661b652",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
+   "id": "2a1a4bc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_cat_params(params):\n",
+    "    cont_params = {}\n",
+    "    cat_params = {}\n",
+    "    for k, v in params.items():\n",
+    "        if len(v.valid_values) < 100:\n",
+    "            if 'semitones' in k or 'rate' in k or v.type == float:\n",
+    "                if v.range == (0.0, 1.0, 1.0):\n",
+    "                    cat_params[k] = v\n",
+    "                else:\n",
+    "                    cont_params[k] = v\n",
+    "            else:\n",
+    "                cat_params[k] = v\n",
+    "        else:\n",
+    "            cont_params[k] = v\n",
+    "    return cat_params, cont_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "5cc337dd",
    "metadata": {},
    "outputs": [],
@@ -36,34 +60,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "100a1cdb",
+   "execution_count": 30,
+   "id": "8d7ced3b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0.0, 1.0, 0.16666666666666666)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "227\n",
+      "47\n",
+      "180\n"
+     ]
     }
    ],
    "source": [
-    "def get_value_range(param):\n",
-    "    valid_values = param.valid_values\n",
-    "    valid_raw_values = [param.get_raw_value_for_text(v) for v in valid_values]\n",
-    "    min_raw, max_raw = min(valid_raw_values), max(valid_raw_values)\n",
-    "    step = (max_raw - min_raw) / (len(valid_values) - 1)\n",
-    "    return min_raw, max_raw, step\n",
-    "get_value_range(v)"
+    "print(len(target_params))\n",
+    "print(len(cat_params))\n",
+    "print(len(cont_params))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
+   "id": "100a1cdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_value_range(param):\n",
+    "    valid_values = param.valid_values\n",
+    "    valid_raw_values = []\n",
+    "    for v in valid_values:\n",
+    "        if param.type == float:\n",
+    "            valid_raw_values.append(param.get_raw_value_for(v))\n",
+    "        elif param.type == str:\n",
+    "            valid_raw_values.append(param.get_raw_value_for(str(v)))\n",
+    "        elif param.type == bool:\n",
+    "            valid_raw_values.append(param.get_raw_value_for(v))\n",
+    "    min_raw, max_raw = min(valid_raw_values), max(valid_raw_values)\n",
+    "    step = (max_raw - min_raw) / (len(valid_values) - 1)\n",
+    "    return min_raw, max_raw, step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "18286bca",
    "metadata": {},
    "outputs": [],
@@ -88,76 +129,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "id": "e5c386df",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a_octave_oct': -3.30907412336959,\n",
-       " 'a_semi_semitones': -4.1488297334383315,\n",
-       " 'a_scan_bpm_rate': 0.5236300940965875,\n",
-       " 'a_unison': 10.214371108924682,\n",
-       " 'b_octave_oct': 1.8191876472804767,\n",
-       " 'b_semi_semitones': 1.9752002025057358,\n",
-       " 'b_scan_bpm_rate': 0.7060762230338976,\n",
-       " 'b_unison': 9.178861477156184,\n",
-       " 'c_octave_oct': 2.4379220475708747,\n",
-       " 'c_semi_semitones': 3.6485251432773858,\n",
-       " 'c_scan_bpm_rate': 0.9206460540070867,\n",
-       " 'c_unison': 6.788900836785024,\n",
-       " 'sub_octave_oct': -1.2154435668977026,\n",
-       " 'filter_1_x': 0.6407977066077988,\n",
-       " 'filter_1_y': 0.7000498284111927,\n",
-       " 'filter_2_x': 0.8081834321621865,\n",
-       " 'filter_2_y': 0.20355626672783012,\n",
+       "{'a_level': 0.2411328034471859,\n",
+       " 'a_pan': 0.39332889591570575,\n",
+       " 'a_octave_oct': 0.9470365025480945,\n",
+       " 'a_semi_semitones': 11.447060671754365,\n",
+       " 'a_fine_cents': 51.87102199300284,\n",
+       " 'a_ratio': 0.33575651921698046,\n",
+       " 'a_hz_offset_hz': -243.3966032135611,\n",
+       " 'a_coarse_pitch': 0.28416553208328355,\n",
+       " 'a_start': 25.280326273432564,\n",
+       " 'a_end': 20.337559680608443,\n",
+       " 'a_scan_rate': 119.47686893137563,\n",
+       " 'a_scan_bpm_rate': 0.022423038571651732,\n",
+       " 'a_position': 35.03259764400776,\n",
+       " 'a_loop_start': 0.598193160243754,\n",
+       " 'a_loop_end': 59.79158766106202,\n",
+       " 'a_loop_x_fade': 32.07355236490621,\n",
+       " 'a_single_slice': 9.98533838483774,\n",
+       " 'a_unison': 2.556636274142349,\n",
+       " 'a_uni_detune': 0.6294985793549361,\n",
+       " 'a_uni_blend': 30.661427388521712,\n",
+       " 'a_uni_width': 27.777307629265692,\n",
+       " 'a_uni_span': -12.104188306977548,\n",
+       " 'a_uni_rand_start': 24.20314378507822,\n",
+       " 'a_uni_warp': -3.9827683439610553,\n",
+       " 'a_uni_warp_2': -26.337793125968247,\n",
+       " 'a_warp_var': 0.7285038201796027,\n",
+       " 'a_warp_2_var': 0.9447704455442297,\n",
+       " 'a_wt_pos': 121.95530605358593,\n",
+       " 'a_uni_wt_pos': 56.852864306229236,\n",
+       " 'a_phase': 0.9588774707213088,\n",
+       " 'a_rand_phase': 14.21563011996544,\n",
+       " 'a_param44': 0.017568168137132245,\n",
+       " 'a_param45': 0.4121523134910037,\n",
+       " 'a_param46': 0.2807649338092244,\n",
+       " 'a_param47': 0.1758790433245906,\n",
+       " 'a_param48': 0.7825906018495153,\n",
+       " 'a_param49': 0.9649131402900626,\n",
+       " 'a_param50': 0.5522920068301924,\n",
+       " 'a_param51': 0.24244660411200736,\n",
+       " 'a_param52': 0.9560312274501976,\n",
+       " 'a_param53': 0.2585530548832844,\n",
+       " 'a_param54': 0.42697973099056785,\n",
+       " 'a_param55': 0.9464863447518262,\n",
+       " 'b_level': 0.7944725824331508,\n",
+       " 'b_pan': 0.3818889895214379,\n",
+       " 'b_octave_oct': -1.935622034311712,\n",
+       " 'b_semi_semitones': -9.474582358571773,\n",
+       " 'b_fine_cents': 70.22548209842233,\n",
+       " 'b_ratio': 0.8214661716534102,\n",
+       " 'b_hz_offset_hz': 224.8518606758803,\n",
+       " 'b_coarse_pitch': 0.3196844649835754,\n",
+       " 'b_start': 60.991484108105645,\n",
+       " 'b_end': 94.89127347998357,\n",
+       " 'b_scan_rate': -32.31422033954453,\n",
+       " 'b_scan_bpm_rate': 0.0030306928541912193,\n",
+       " 'b_position': 36.06171736603764,\n",
+       " 'b_loop_start': 33.66230741964924,\n",
+       " 'b_loop_end': 96.48495475432907,\n",
+       " 'b_loop_x_fade': 63.13578426471047,\n",
+       " 'b_single_slice': 68.70890787784235,\n",
+       " 'b_unison': 1.5874871844568537,\n",
+       " 'b_uni_detune': 0.32949069791574404,\n",
+       " 'b_uni_blend': 54.279400052644256,\n",
+       " 'b_uni_width': 67.60810139534343,\n",
+       " 'b_uni_span': 80.49217419370757,\n",
+       " 'b_uni_rand_start': 53.10691717451637,\n",
+       " 'b_uni_warp': 58.24871320932067,\n",
+       " 'b_uni_warp_2': -0.35161188722767633,\n",
+       " 'b_warp_var': 0.6130364606172563,\n",
+       " 'b_warp_2_var': 0.12485206764422618,\n",
+       " 'b_wt_pos': 125.9727115860334,\n",
+       " 'b_uni_wt_pos': 80.66044147690144,\n",
+       " 'b_phase': 0.15092636283342786,\n",
+       " 'b_rand_phase': 43.58560232400691,\n",
+       " 'b_param44': 0.33049877359319557,\n",
+       " 'b_param45': 0.29152901965899114,\n",
+       " 'b_param46': 0.09811566224345492,\n",
+       " 'b_param47': 0.6854910509164704,\n",
+       " 'b_param48': 0.21677442944518555,\n",
+       " 'b_param49': 0.12276232408758558,\n",
+       " 'b_param50': 0.714005987100106,\n",
+       " 'b_param51': 0.3887600623115739,\n",
+       " 'b_param52': 0.4822851682421345,\n",
+       " 'b_param53': 0.6741174640022823,\n",
+       " 'b_param54': 0.08907081793583271,\n",
+       " 'b_param55': 0.93217100146308,\n",
+       " 'c_level': 0.5844726527404562,\n",
+       " 'c_pan': 0.030281968552072325,\n",
+       " 'c_octave_oct': 1.687372574432711,\n",
+       " 'c_semi_semitones': -0.9476136783586373,\n",
+       " 'c_fine_cents': -15.926582921958328,\n",
+       " 'c_ratio': 0.7919586927037386,\n",
+       " 'c_hz_offset_hz': -60.49803281580603,\n",
+       " 'c_coarse_pitch': 0.9878981754154351,\n",
+       " 'c_start': 30.53223798768271,\n",
+       " 'c_end': 76.92567234452245,\n",
+       " 'c_scan_rate': 75.34528492390939,\n",
+       " 'c_scan_bpm_rate': 0.8824757452315476,\n",
+       " 'c_position': 98.636535066941,\n",
+       " 'c_loop_start': 16.114163462705978,\n",
+       " 'c_loop_end': 95.28630932347727,\n",
+       " 'c_loop_x_fade': 25.19357590841628,\n",
+       " 'c_single_slice': 43.476498882277504,\n",
+       " 'c_unison': 3.116322368407057,\n",
+       " 'c_uni_detune': 0.9900426373987695,\n",
+       " 'c_uni_blend': 94.81369131188355,\n",
+       " 'c_uni_width': 80.85438636996699,\n",
+       " 'c_uni_span': -29.711997095106597,\n",
+       " 'c_uni_rand_start': 38.907499864175634,\n",
+       " 'c_uni_warp': -85.91073610438636,\n",
+       " 'c_uni_warp_2': 16.380365767674633,\n",
+       " 'c_warp_var': 0.11521279714884791,\n",
+       " 'c_warp_2_var': 0.3497832376534512,\n",
+       " 'c_wt_pos': 236.2057237257147,\n",
+       " 'c_uni_wt_pos': 3.476495561796696,\n",
+       " 'c_phase': 0.20985522528860412,\n",
+       " 'c_rand_phase': 67.09611911977422,\n",
+       " 'c_param44': 0.2976869174713226,\n",
+       " 'c_param45': 0.8237783068624036,\n",
+       " 'c_param46': 0.4688595728468474,\n",
+       " 'c_param47': 0.8374671900867643,\n",
+       " 'c_param48': 0.5596370148652002,\n",
+       " 'c_param49': 0.29924000858316524,\n",
+       " 'c_param50': 0.4229130888979995,\n",
+       " 'c_param51': 0.8848406573991677,\n",
+       " 'c_param52': 0.6641871345555769,\n",
+       " 'c_param53': 0.28931644260828515,\n",
+       " 'c_param54': 0.8463049307639288,\n",
+       " 'c_param55': 0.6119281901799212,\n",
+       " 'sub_level': 0.32590934332640276,\n",
+       " 'sub_pan': 0.8173560520235588,\n",
+       " 'sub_octave_oct': -1.0149726452702321,\n",
+       " 'sub_coarse_pitch': 0.706783869041995,\n",
+       " 'sub_phase': 0.5662736215968813,\n",
+       " 'filter_1_level': 0.00518700835356023,\n",
+       " 'filter_1_type': 0.1649500668181111,\n",
+       " 'filter_1_freq_hz': 0.21373349386644025,\n",
+       " 'filter_1_res': 52.9714410337975,\n",
+       " 'filter_1_drive': 87.70926361419382,\n",
+       " 'filter_1_var': 90.71128439154658,\n",
+       " 'filter_1_wet': 97.44379051429168,\n",
+       " 'filter_1_stereo': 99.27997562094988,\n",
+       " 'filter_1_x': 0.16005719082455538,\n",
+       " 'filter_1_y': 0.7062887457290027,\n",
+       " 'filter_2_level': 0.1563038887480297,\n",
+       " 'filter_2_type': 0.43538357471747174,\n",
+       " 'filter_2_freq_hz': 0.257404173017204,\n",
+       " 'filter_2_res': 70.91999502001836,\n",
+       " 'filter_2_drive': 59.924573508587144,\n",
+       " 'filter_2_var': 10.578492581599052,\n",
+       " 'filter_2_wet': 57.15563684994505,\n",
+       " 'filter_2_stereo': 55.284905608239534,\n",
+       " 'filter_2_x': 0.5556568574522546,\n",
+       " 'filter_2_y': 0.28827171009436836,\n",
+       " 'a_filter_balance': -67.75464344395685,\n",
+       " 'a_bus1': 0.2699939304147516,\n",
+       " 'a_bus2': 0.1543542971174754,\n",
+       " 'b_filter_balance': 0.0936715890054387,\n",
+       " 'b_bus1': 0.6312335139263467,\n",
+       " 'b_bus2': 0.06302459251267312,\n",
+       " 'c_filter_balance': -19.191232467803232,\n",
+       " 'c_bus1': 0.28613312188871987,\n",
+       " 'c_bus2': 0.9588406071387003,\n",
+       " 'sub_osc_filter_balance': 60.3548657714629,\n",
+       " 'sub_osc_bus1': 0.017662657322092046,\n",
+       " 'sub_osc_bus2': 0.3958008639478455,\n",
+       " 'filter_1_bus1': 0.602684429337574,\n",
+       " 'filter_1_bus2': 0.28776998830034084,\n",
+       " 'filter_2_bus1': 0.215356420253335,\n",
+       " 'filter_2_bus2': 0.3158246141778027,\n",
+       " 'arp_rate': 2.4418840421619734,\n",
+       " 'arp_shift': 43.863864300226055,\n",
+       " 'arp_range': -14.245615109034546,\n",
+       " 'arp_offset': -72.40006996676456,\n",
+       " 'arp_repeats': -29.109445147628605,\n",
+       " 'arp_gate': 68.44130330526201,\n",
+       " 'arp_chance': -64.91490486100568,\n",
+       " 'arp_retrig_rate': 85.83196239809214,\n",
+       " 'arp_velo_decay': -65.1659773180836,\n",
+       " 'arp_velo_target': -18.4409346557555,\n",
+       " 'arp_transpose': 39.547256482141506,\n",
+       " 'arp_wrap_transpose': -62.19927435157662,\n",
+       " 'arp_wrap_range': -85.74327213400572,\n",
+       " 'arp_wrap_phantom_note': 56.23113149485715,\n",
        " 'a_enable': 1,\n",
-       " 'a_pitch_track': 1,\n",
+       " 'a_pitch_track': 0,\n",
        " 'a_reverse': 0,\n",
        " 'a_scan_key_track': 0,\n",
        " 'a_loop_mode': 2,\n",
        " 'a_relative_loop': 1,\n",
        " 'a_slice_play_mode': 0,\n",
-       " 'a_uni_stack': 0,\n",
+       " 'a_uni_stack': 4,\n",
        " 'a_warp': 0,\n",
-       " 'a_warp_mode': 66,\n",
+       " 'a_warp_mode': 14,\n",
        " 'a_warp_2': 0,\n",
-       " 'a_warp_2_mode': 17,\n",
-       " 'b_enable': 1,\n",
-       " 'b_pitch_track': 0,\n",
+       " 'a_warp_2_mode': 21,\n",
+       " 'b_enable': 0,\n",
+       " 'b_pitch_track': 1,\n",
        " 'b_reverse': 0,\n",
-       " 'b_scan_key_track': 1,\n",
-       " 'b_loop_mode': 3,\n",
-       " 'b_relative_loop': 1,\n",
+       " 'b_scan_key_track': 0,\n",
+       " 'b_loop_mode': 4,\n",
+       " 'b_relative_loop': 0,\n",
        " 'b_slice_play_mode': 1,\n",
-       " 'b_uni_stack': 5,\n",
+       " 'b_uni_stack': 8,\n",
        " 'b_warp': 0,\n",
-       " 'b_warp_mode': 48,\n",
+       " 'b_warp_mode': 53,\n",
        " 'b_warp_2': 0,\n",
-       " 'b_warp_2_mode': 20,\n",
+       " 'b_warp_2_mode': 54,\n",
        " 'c_enable': 1,\n",
        " 'c_pitch_track': 0,\n",
        " 'c_reverse': 0,\n",
-       " 'c_scan_key_track': 1,\n",
-       " 'c_loop_mode': 4,\n",
-       " 'c_relative_loop': 0,\n",
+       " 'c_scan_key_track': 0,\n",
+       " 'c_loop_mode': 0,\n",
+       " 'c_relative_loop': 1,\n",
        " 'c_slice_play_mode': 1,\n",
-       " 'c_uni_stack': 3,\n",
+       " 'c_uni_stack': 2,\n",
        " 'c_warp': 0,\n",
-       " 'c_warp_mode': 11,\n",
+       " 'c_warp_mode': 31,\n",
        " 'c_warp_2': 0,\n",
-       " 'c_warp_2_mode': 25,\n",
-       " 'sub_enable': 0,\n",
-       " 'sub_pitch_track': 0,\n",
-       " 'sub_shape': 4,\n",
+       " 'c_warp_2_mode': 19,\n",
+       " 'sub_enable': 1,\n",
+       " 'sub_pitch_track': 1,\n",
+       " 'sub_shape': 1,\n",
        " 'sub_cont_phase': 1,\n",
-       " 'filter_1_on': 1,\n",
+       " 'filter_1_on': 0,\n",
        " 'filter_2_on': 1,\n",
        " 'arp_enable': 1}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "f4796ada",
    "metadata": {},
    "outputs": [],
